# SimpleLemon

./: CHANGELOG.MD  Pipfile  README.md  main.py  pyproject.toml
res/: wisdom.txt
src/: crypto.py  main_window.py
src/ui/: chat_window.py  main_window.py  password_window.py
