[tool.poetry]
name = "simplelemon"
version = "0.1.0"
description = "An encrypted chat system that prioritizes user privacy."
authors = ["Aareon <aareon@anarchist.institute>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
websockets = "^11.0.1"
PyNaCl = "^1.5.0"
PySide6 = "^6.5.0"
gnupg = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
